[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Pedigo", email = "benjamindpedigo@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "caveclient>=8.0.1",
    "humanize>=4.15.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nglui>=4.7.2",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "pyvista[all]>=0.47.3",
    "pywaffle>=1.1.1",
    "scikit-learn==1.6.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "standard-transform>=1.4.1",
    "toml>=0.10.2",
]

[project.scripts]
analysis = "analysis:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
